--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="output" path="bin"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" exported="true"/>
-	<classpathentry kind="lib" path="C:/Game/OpenCraft/Gradle/OpenCraft/lib/gson-2.3.jar" exported="true"/>
-	<classpathentry kind="lib" path="C:/Game/OpenCraft/Gradle/OpenCraft/lib/log4j-1.2.17.jar" exported="true"/>
+	<classpathentry kind="lib" path="./lib/gson-2.3.jar" exported="true"/>
+	<classpathentry kind="lib" path="./lib/log4j-1.2.17.jar" exported="true"/>
 </classpath>
